--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,65 @@ color: #404bbf;
 .footer-social-link:focus {
     background-color: #31d0aa;
 }
+.footer-subscribe-container {
+  margin-left: auto;
+}
+
+.footer-subscribe-titele {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-form-input {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-input:focus {
+  outline: transparent;
+  border-color: #31d0aa;
+}
+
+.footer-form-input::placeholder {
+  color: #ffffff;
+}
+
+.footer-form-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 165px;
+  height: 40px;
+}
+
+.footer-form-icon {
+  margin-left: 16px;
+  fill: #ffffff;
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: #31d0aa;
+}
 
 
 /* ======BACKDROP====== */
@@ -643,7 +702,7 @@ color: #404bbf;
   margin-right: auto;
   border-radius: 4px;
   padding: 16px 32px;
-    
+
 }
 .butn {
   font-weight: 500;
@@ -661,5 +720,5 @@ color: #404bbf;
 .order-form-submit:hover,
 .order-form-submit:focus {
   background-color: #404bbf;  
+    
 }
-
