--- a/css/styles.css
+++ b/css/styles.css
@@ -602,7 +602,7 @@ color: #404bbf;
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
-  padding-left: 16px;
+  padding-left: 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-form-input:focus {
@@ -621,6 +621,9 @@ color: #404bbf;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.order-form-comment-wrapper {
+    margin-bottom: 16px;
+}
 
 .order-form-comment {
     font-size: 12px;
